--- a/pom.xml
+++ b/pom.xml
@@ -101,11 +101,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.twilio.sdk</groupId>
             <artifactId>twilio</artifactId>
             <version>8.31.1</version>
+        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.infobip/infobip-api-java-client -->
+        <dependency>
+            <groupId>com.infobip</groupId>
+            <artifactId>infobip-api-java-client</artifactId>
+            <version>4.3.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
