FZ first commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 inputFile=classpath:/data.csv
 spring.batch.job.enabled=true
 
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orclpdb
+spring.datasource.url=jdbc:oracle:thin:@localhost:1523:orcl
 
 # Nom d'utilisateur pour la connexion à la base de données
-spring.datasource.username=chichi
+spring.datasource.username=batchAlerte
 
 # Mot de passe pour la connexion à la base de données
-spring.datasource.password=orcl
+spring.datasource.password=batchAlerte
 
 # Driver JDBC Oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -44,3 +44,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 infobip.api.key=33ac1a0e885fc003953fa328aae86d7d-4d3203c7-758d-4898-8719-d1006434a91a
 infobip.api.url=https://api.infobip.com
 infobip.sender.name=BATCH ALERTE ADRIA
+
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
