PARAMETRAGE EMAIL et SMS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 inputFile=classpath:/data.csv
 spring.batch.job.enabled=true
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1523:orcl
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orclpdb
+
 
 # Nom d'utilisateur pour la connexion à la base de données
-spring.datasource.username=batchAlerte
+spring.datasource.username=chichi
 
 # Mot de passe pour la connexion à la base de données
-spring.datasource.password=batchAlerte
+spring.datasource.password=orcl
 
 # Driver JDBC Oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
