--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,17 @@
             <artifactId>spring-security-oauth2-jose</artifactId>
             <version>6.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>25.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.1.1</version>
+        </dependency>
 
 
 
